# app/Models/User.php
@@ -72,8 +72,10 @@ class User extends Authenticatable
                 'lng'              => 'required|string'
             ],
             'login'          => [
-                'email'    => 'required|string',
-                'password' => 'required|string',
+                'email'        => 'required|string',
+                'password'     => 'required|string',
+                'device_token' => 'required',
+                'device_meta'  => 'required',
             ],
             'changePassword' => [
                 'old_password'          => 'required',
